--- a/bower.json
+++ b/bower.json
@@ -20,9 +20,9 @@
     "tests"
   ],
   "dependencies": {
-    "chai": "~3.0.0",
-    "mocha": "~2.2.5",
-    "jquery": "~2.1.4",
-    "underscore": "~1.8.3"
+    "chai": "^4.1.1",
+    "mocha": "^3.5.0",
+    "jquery": "^3.2.1",
+    "underscore": "^1.8.3"
   }
 }
